# agentic-mlops-phishing-platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml  model_quality_gate.yaml
constraints/: py312-linux-agent.txt  py312-linux-gpu.txt
data/raw/: phishing_samples.csv
docker/: Dockerfile.api
docs/: phishing_incident_response.md  security_exceptions.md
reports/: baseline_metrics.json
src/agentic_mlops_phishing_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phishing_ml/: config.py
src/phishing_ml/agents/: copilot.py  mlops_tools.py  workflow.py
src/phishing_ml/data/: load_dataset.py
src/phishing_ml/evaluation/: evaluate_baseline.py  metrics.py  quality_gate.py
src/phishing_ml/inference/: api.py  predictor.py
src/phishing_ml/rag/: chunks.py  documents.py  retriever.py  search.py
src/phishing_ml/training/: model.py  train_baseline.py
tests/: test_api.py  test_config.py  test_copilot.py  test_dataset_loader.py  test_metrics.py  test_mlops_tools.py  test_quality_gate.py  test_rag_chunks.py  test_rag_documents.py  test_rag_retriever.py  test_rag_search.py  test_workflow.py
