[project]
name = "agentic-mlops-phishing-platform"
version = "0.1.0"
description = "An agentic MLOps platform for phishing and incident detection."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12,<2.13",
    "python-dotenv>=1.2,<1.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.139,<0.140",
    "uvicorn>=0.50,<0.51",
    "pydantic>=2.13,<2.14",
    "scikit-learn>=1.9,<1.10",
]
training = [
    "pandas>=2.3,<2.4",
    "scikit-learn>=1.9,<1.10",
    "mlflow>=3.14,<3.15",
    "pyyaml>=6.0,<6.1",
]
agent = [
    "langgraph>=1.2,<1.3",
]
dev = [
    "pytest>=9.1,<9.2",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<2.2",
    "httpx2>=2.5,<2.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
